--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"react-redux": "^7.1.1",
 		"react-router-dom": "^5.1.0",
 		"react-scripts": "3.1.2",
+		"redux": "^4.0.4",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^6.0.0",
+		"redux-saga": "^1.1.1",
 		"reselect": "^4.0.0"
 	},
 	"scripts": {
